# django_tutorial

./: Pipfile
django-polls/: LICENSE  pyproject.toml
django-polls/django_polls/: apps.py  tests.py
django-polls/django_polls/static/polls/: style.css
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/polls/: models.py  tests.py  views.py
djangotutorial/polls/migrations/: 0001_initial.py
djangotutorial/polls/templates/polls/: detail.html
djangotutorial/templates/admin/: base_site.html
